--- a/View/octsend/src/components/reset password/reset-password.css
+++ b/View/octsend/src/components/reset password/reset-password.css
@@ -4,41 +4,45 @@
     padding: 0;
 }
 
-body{
+/*body{
     background-color: #F9A826;
+ } */
+.resetpassword-form{
+    background-color: #009D96;
 }
 
-.right-form form{
-    background-color: #F9A826 ;
+.resetpassword-form form{
+    background-color: #009D96 ;
     /* opacity: 0.80; */
     height: 370px ;
     width:420px;
     border-radius: 7px;
     margin-top: 170px;
-    margin-left: 510px;
+    margin-left: 460px;
 }
 
-.main-logo{
+.main-logo-res{
     margin-bottom: 15px;
 }
-.main-logo img{
-    width: 307px;
+.main-logo-res img{
+    width: 250px;
     margin-left: 40px;
+    /* margin-top: 27px; */
     cursor: pointer;
 }
-input{
+.resetpassword-form input{
    width: 280px;
    height: 28px; 
    
 }
 
-input::placeholder{
+.resetpassword-form input::placeholder{
    color: #009D96 ;
    font-family: 'Inter', sans-serif;
    margin-left: 55px;
 }
 
-input:focus{
+.resetpassword-form input:focus{
    outline-color:  #F9A826;
 }
 /* input[type="text"]{
@@ -51,7 +55,7 @@ input:focus{
     padding-left: 20px;
 } */
 
-input[type="password"]{
+.resetpassword-form input[type="password"]{
     background-color: #fff;
     margin-bottom: 27px;
     margin-left: 15px;
@@ -61,7 +65,7 @@ input[type="password"]{
     padding-left: 20px;
 }
 
-input[type="submit"]{
+.resetpassword-form input[type="submit"]{
     background-color: #F9A826;
     border: none;
     margin-left: 15px;
@@ -74,9 +78,9 @@ input[type="submit"]{
 
 }
 
-input[type="submit"]:hover{
-    background-color: #f9a826d3;
-    color: #fff;
+.resetpassword-form input[type="submit"]:hover{
+    background-color: #fff;
+     color: #F9A826;
 }
 
 /* input[type="checkbox"]{
@@ -85,7 +89,7 @@ input[type="submit"]:hover{
     margin-left: 70px;
 } */
 
-label{
+.resetpassword-form label{
    font-family: 'Inter', sans-serif;
    color: #fff;
    margin-top: 96px;
