--- a/View/octsend/src/components/compose/compose.css
+++ b/View/octsend/src/components/compose/compose.css
@@ -69,7 +69,7 @@
 .main-section{
     grid-area: main-section;
     border: 1px solid #009D96;
-    width: 200px;
+    
     
 }
 
@@ -80,6 +80,9 @@
     font-size: 30px;
     font-style: italic;
     border: 1px solid #009D96;
+    width: 250px;
+    height: 35px;
+
 }
 
 .main-message-section{
@@ -111,7 +114,7 @@
     width: 327px;
     margin-bottom: 27px;
     border: none;
-    border: 1px solid #009D96;
+    /* border: 1px solid #009D96; */
 }
 
 .form-section{
@@ -119,7 +122,7 @@
 }
 .form-section form{
     margin-left: 0px;
-    border: 1px solid #009D96;
+    /* border: 1px solid #009D96; */
     width: 470px;
     margin: 0;
     height: 330px;
@@ -147,7 +150,7 @@
     width: 327px;
     height: 28px;
     padding: 15px;
-    border: 1px solid #009D96;
+    /* border: 1px solid #009D96; */
     
 }
 
