Commit for compose state

--- a/View/octsend/src/components/signin/signin.css
+++ b/View/octsend/src/components/signin/signin.css
@@ -109,6 +109,9 @@
      width: 15px;
      height: 15px;
      margin-left: 15px;
+     accent-color: #F9A826;  
+     cursor: pointer;
+        
  }
 
  .signin-form label{
