--- a/View/octsend/src/components/compose/compose.css
+++ b/View/octsend/src/components/compose/compose.css
@@ -56,7 +56,7 @@
 
 }
 
-.left-section-compose h2:nth-child(2),.left-section-compose h2:last-child {
+.left-section-compose h2:nth-child(2),.left-section-compose h2:nth-child(3),.left-section-compose h2:last-child {
     color: #009D96;
     font-weight: 300;
     /* border: 1px solid red; */
@@ -111,6 +111,7 @@
     width: 327px;
     margin-bottom: 27px;
     border: none;
+    border: 1px solid #009D96;
 }
 
 .form-section{
@@ -119,11 +120,23 @@
 .form-section form{
     margin-left: 0px;
     border: 1px solid #009D96;
-    width: 320px;
+    width: 470px;
     margin: 0;
     height: 330px;
 }
 
+.form-section button{
+    width: 120px;
+    height: 30px;
+    background-color: #009D96;
+    margin-left: 15px;
+    margin-top: 15px;
+    font-size: 12px;
+    font-family: 'Inter', sans-serif;
+    color: #fff;
+    border-radius: 5px;
+    
+}
 
 
 #compose-subject{
@@ -134,6 +147,7 @@
     width: 327px;
     height: 28px;
     padding: 15px;
+    border: 1px solid #009D96;
     
 }
 
