Commit for font color change

--- a/View/octsend/src/components/compose/compose.css
+++ b/View/octsend/src/components/compose/compose.css
@@ -40,7 +40,7 @@
     margin-top: 50px;
 }
 .left-section-compose h2{
-    color: #F9A826;
+    color: #009D96;
     font-family: 'Inter', sans-serif;
     font-style: italic;
     font-weight: 300;
