Main page alterations

--- a/View/octsend/src/components/compose/compose.css
+++ b/View/octsend/src/components/compose/compose.css
@@ -215,6 +215,7 @@ textarea{
     background-color: #fff;
     margin: 20px;
     border: 1px solid #fff;
+    overflow-y: scroll;
   }
   .hisory-message-section{
       display: flex;
