--- a/View/octsend/src/components/reset password/reset-password.css
+++ b/View/octsend/src/components/reset password/reset-password.css
@@ -4,15 +4,16 @@
     padding: 0;
 }
 
-/*body{
+body{
     background-color: #F9A826;
- } */
+}
 .resetpassword-form{
     background-color: #009D96;
 }
 
 .resetpassword-form form{
     background-color: #009D96 ;
+    border: 3px dotted #F9A826;
     /* opacity: 0.80; */
     height: 370px ;
     width:420px;
@@ -26,7 +27,7 @@
 }
 .main-logo-res img{
     width: 250px;
-    margin-left: 40px;
+    margin-left: 100px;
     /* margin-top: 27px; */
     cursor: pointer;
 }
@@ -58,7 +59,7 @@
 .resetpassword-form input[type="password"]{
     background-color: #fff;
     margin-bottom: 27px;
-    margin-left: 15px;
+    margin-left: 60px;
     border: none;
     outline-color: #F9A826;
     box-shadow: 1px 5px 5px #3f3f3f;
@@ -68,7 +69,7 @@
 .resetpassword-form input[type="submit"]{
     background-color: #F9A826;
     border: none;
-    margin-left: 15px;
+    margin-left: 60px;
     margin-bottom: 27px;
     color: #009D96;
     font-family: 'Inter', sans-serif;
@@ -93,9 +94,9 @@
    font-family: 'Inter', sans-serif;
    color: #fff;
    margin-top: 96px;
-    margin-left: 0;   
+    margin-left: 100px;   
     text-align: center;
-   font-size: 12px;
+   font-size: 15px;
    font-style: italic;
 
 }
