--- a/View/octsend/src/components/signin/signin.css
+++ b/View/octsend/src/components/signin/signin.css
@@ -68,7 +68,7 @@
      background-color: #fff;
      border: none;
      margin-bottom: 27px;
-     margin-left: 15px;
+     margin-left: 70px;
      margin-top: 96px;
      box-shadow: 1px 5px 5px #3f3f3f;
      padding-left: 20px;
@@ -81,7 +81,7 @@
  .signin-form input[type="password"]{
      background-color: #fff;
      margin-bottom: 27px;
-     margin-left: 15px;
+     margin-left: 70px;
      border: none;
      outline-color: #F9A826;
      box-shadow: 1px 5px 5px #3f3f3f;
@@ -91,7 +91,7 @@
  .signin-form input[type="submit"]{
      background-color: #F9A826;
      border: none;
-     margin-left: 15px;
+     margin-left: 70px;
      margin-bottom: 27px;
      color: #009D96;
      font-family: 'Inter', sans-serif;
@@ -122,8 +122,20 @@
 /* p{
     display: inline;
 } */
+
+.check-box{
+    width: 150px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.form-details{
+    display: flex;
+    width: 320px;
+    margin-left: 31px;
+}
  #remember{
-     margin-top: 10px;
+     
      margin-left: 10px;
      
  }
@@ -142,7 +154,7 @@
      color: #fff;
  }
  #not-a-member{
-     margin-left: 20px;
+     margin-left: 140px;
      /* margin-top: 59px; */
  }
 
