--- a/View/octsend/src/components/reset password/reset-password.css
+++ b/View/octsend/src/components/reset password/reset-password.css
@@ -19,7 +19,7 @@ body{
     width:420px;
     border-radius: 7px;
     margin-top: 170px;
-    margin-left: 460px;
+    margin-left: 330px;
 }
 
 .main-logo-res{
@@ -34,7 +34,7 @@ body{
 .resetpassword-form input{
    width: 280px;
    height: 28px; 
-   
+   font-size: 12px;
 }
 
 .resetpassword-form input::placeholder{
@@ -93,7 +93,7 @@ body{
 .resetpassword-form label{
    font-family: 'Inter', sans-serif;
    color: #fff;
-   margin-top: 96px;
+   margin-top: 6px;
     margin-left: 100px;   
     text-align: center;
    font-size: 15px;
