--- a/View/octsend/src/components/signin/signin.css
+++ b/View/octsend/src/components/signin/signin.css
@@ -50,15 +50,14 @@
  }
  .signin-form input{
     width: 280px;
-    height: 28px;
-     
-    
+    height: 28px;  
 }
 
 .signin-form input::placeholder{
     color: #009D96 ;
     font-family: 'Inter', sans-serif;
     margin-left: 55px;
+    font-size: 12px;
 }
 
 /* input:focus{
@@ -97,7 +96,7 @@
      font-family: 'Inter', sans-serif;
      font-weight: 600;
      text-transform: uppercase;
-
+     font-size: 12px;
  }
 
  .signin-form input[type="submit"]:hover{
