--- a/View/octsend/src/components/signup/signup.css
+++ b/View/octsend/src/components/signup/signup.css
@@ -54,7 +54,7 @@
 .signup-form input::placeholder{
    color: #009D96 ;
    font-family: 'Inter', sans-serif;
-   /* margin-left: 55px; */
+   font-size: 12px;
 }
 
 .signup-form input:focus{
@@ -102,7 +102,7 @@
     font-family: 'Inter', sans-serif;
     font-weight: 600;
     text-transform: uppercase;
-
+    font-size: 12px;
 }
 
 .signup-form input[type="submit"]:hover{
